@@ -1,5 +1,11 @@
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/cpp0x/constexpr-friend.C: New.
+	* g++.dg/cpp0x/constexpr-incomplete1.C: New.
+	* g++.dg/cpp0x/constexpr-incomplete2.C: New.
+	* g++.dg/cpp0x/constexpr-incomplete3.C: New.
+	* g++.dg/cpp0x/constexpr-memfn1.C: Adjust.
+
 	* g++.dg/cpp0x/sfinae22.C: New.
 
 	* g++.dg/cpp0x/variadic108.C: New.
