@@ -1,5 +1,11 @@
 2011-05-20  Jason Merrill  <jason@redhat.com>
 
+	PR c++/48948
+	* class.c (finalize_literal_type_property): Only check
+	for constexpr member functions of non-literal class.
+	* decl.c (cp_finish_decl): Don't call validate_constexpr_fundecl.
+	* semantics.c (literal_type_p): Call complete_type.
+
 	* semantics.c (validate_constexpr_fundecl): Check DECL_TEMPLATE_INFO
 	rather than DECL_TEMPLATE_INSTANTIATION.
 	(cxx_eval_call_expression): Likewise.
